fix sonar high/medium warnings